--- a/src/Pid/NaviBar/NaviBar.css
+++ b/src/Pid/NaviBar/NaviBar.css
@@ -116,4 +116,10 @@ nav{
 }
 .nav_item_dropdown{
     list-style-type: none;
-  }
+}
+.dropdown-item:hover{
+    cursor: pointer;
+}
+.dark-mode .dropdown-item:hover{
+    background-color: grey;
+}
