--- a/src/Pid/RightSide/RightSide.css
+++ b/src/Pid/RightSide/RightSide.css
@@ -72,7 +72,9 @@
     width:100%;
     margin-bottom: 20px;
     border-radius: 4px;
-
+}
+.dark-mode .see{
+    color: teal;
 }
 .adpic:hover{
     cursor:pointer;
